# logic-piano-learner-au

./: .gitignore  CMakeLists.txt  README.md
Source/: NoteTrainer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SheetTrainer.h
